# MiniCRT

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  entry.c  format.c  malloc.c  new_delete.cpp  stdio.c  string.c  test.cpp
